--- a/FlightReservationSystem/FlightReservationSystem.csproj
+++ b/FlightReservationSystem/FlightReservationSystem.csproj
@@ -44,14 +44,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Airplane.cs" />
+    <Compile Include="Airport.cs" />
+    <Compile Include="AuthorizationSystem.cs" />
+    <Compile Include="Company.cs" />
+    <Compile Include="DBFacade.cs" />
+    <Compile Include="Flight.cs" />
+    <Compile Include="LoginPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="LoginPage.Designer.cs">
+      <DependentUpon>LoginPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manger.cs" />
+    <Compile Include="Passenger.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reservation.cs" />
+    <Compile Include="ReservationSystem.cs" />
+    <Compile Include="Salesman.cs" />
+    <Compile Include="Staff.cs" />
+    <EmbeddedResource Include="LoginPage.resx">
+      <DependentUpon>LoginPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
